# bike-shop-tycoon-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/data/: events.json  products.json
docs/: WINDOWS_BUILD.md
src/: main.cpp
src/core/: AudioManager.cpp  AudioManager.h  Game.cpp  Game.h  SaveSystem.cpp  SaveSystem.h  TimeManager.cpp  TimeManager.h
src/data/: ProductDatabase.cpp  ProductDatabase.h  Types.h
src/systems/: AchievementSystem.cpp  AchievementSystem.h  CustomerManager.cpp  CustomerManager.h  EventSystem.cpp  EventSystem.h  InventoryManager.cpp  InventoryManager.h  RepairService.cpp  RepairService.h
src/ui/: BottomNav.cpp  BottomNav.h  CustomerDetailPanel.cpp  CustomerDetailPanel.h  HUD.cpp  HUD.h  InventoryPanel.cpp  InventoryPanel.h  MainMenu.cpp  MainMenu.h  RepairPanel.cpp  RepairPanel.h  ShopPanel.cpp  ShopPanel.h  UIManager.cpp  UIManager.h
